--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@ input{
 <script src="js/libs/ThreeCSG.js"></script>
 <script src="js/libs/clipper.js"></script>
 <script src="js/libs/fabmo.min.js"></script>
-<script src="js/birdhouse.js"></script>
 
+<script src="js/birdhouse.js"></script>
+<script src="js/draw.js"></script>
+<script src="js/make.js"></script>
 
 <div id="parameters" style="top:10px;left:10px">
 BIRDHOUSE<p>
@@ -1033,244 +1035,11 @@ $("body").on('mousewheel',function(e){
 
 })
 
-function draw(){
 
-	c = document.getElementById("myCanvas")
-	ctx = c.getContext("2d")
-
-	ctx.canvas.height = window.innerHeight-100
-	ctx.canvas.width = window.innerWidth-200
-
-	ctx.clearRect(0,0,ctx.canvas.width,ctx.canvas.height)
-	ctx.lineJoin="round"
-	ctx.lineCap="round"
-
-
-	if(document.getElementById('2D').checked==true){
-
-	ctx.fillStyle="rgba(200,200,200,0.2)"
-	ctx.fillRect(0,0,ctx.canvas.width,ctx.canvas.height)
-
-	ctx.strokeStyle="#000"
-
-
-	ctx.fillStyle="#d3b89e"
-
-	ctx.lineWidth=1	
-
-	sf2 = 2.5
-
-	ctx.translate(50*sf2,ctx.canvas.height-50)
-
-	
-	for(i=0;i<polygons.length;i++){
-
-		for(j=0;j<polygons[i].curves.length;j++){
-			if(j==0){
-				ctx.moveTo(polygons[i].curves[0].X*sf2,0-polygons[i].curves[0].Y*sf2)
-			}
-			else{
-				ctx.lineTo(polygons[i].curves[j].X*sf2,0-(polygons[i].curves[j].Y*sf2))	
-			}
-		}
-		ctx.lineTo(polygons[i].curves[0].X*sf2,0-polygons[i].curves[0].Y*sf2)
-	
-		if(polygons[i].holes.length>0){
-			for(j=0;j<polygons[i].holes.length;j++){	
-				for(k=0;k<polygons[i].holes[j].length;k++){
-					if(k==0){
-						ctx.moveTo(polygons[i].holes[j][k].X*sf2,0-polygons[i].holes[j][k].Y*sf2)
-					}
-					else{
-						ctx.lineTo(polygons[i].holes[j][k].X*sf2,0-polygons[i].holes[j][k].Y*sf2)
-					}
-					
-				}
-				ctx.lineTo(polygons[i].holes[j][0].X*sf2,0-polygons[i].holes[j][0].Y*sf2)
-			}
-		}
-
-		if(i==3){
-			ctx.translate(40*sf2,0)
-		}
-		else if(i>3){
-			ctx.translate(50*sf2,0)
-		}
-		else{
-			ctx.translate(60*sf2,0)
-		}
-
-	}
-
-	ctx.fill()
-	ctx.stroke()
-
-	//cutout
-
-	ctx.beginPath()
-
-	ctx.strokeStyle="#0000dd"
-
-		ctx.translate(-320*sf2,0)
-
-	for(i=0;i<offset.length;i++){
-		for(j=0;j<offset[i].length;j++){
-			ctx.moveTo(offset[i][j][0].X*sf2,0-(offset[i][j][0].Y*sf2))
-			for(k=0;k<offset[i][j].length;k++){
-				ctx.lineTo(offset[i][j][k].X*sf2,0-(offset[i][j][k].Y*sf2))
-			}
-			ctx.lineTo(offset[i][j][0].X*sf2,0-(offset[i][j][0].Y*sf2))
-		}
-
-
-		if(i==3){
-			ctx.translate(40*sf2,0)
-		}
-		else if(i>3){
-			ctx.translate(50*sf2,0)
-		}
-		else{
-			ctx.translate(60*sf2,0)
-		}
-	}
-
-	ctx.stroke()
-
-
-	}
-
-}
 
 var fabmo = new FabMoDashboard()
 
-function make(){
 
-	paths=[]
-
-	pgScale = 100
-
-	for(i=0;i<polygons.length;i++){
-
-		offset=[]
-
-		offset.push(polygons[i].curves)
-	
-		if(polygons[i].holes.length>0){
-			for(j=0;j<polygons[i].holes.length;j++){
-				offset.push(polygons[i].holes[j])
-
-			}
-		}
-	
-		ClipperLib.JS.ScaleUpPaths(offset, pgScale)
-
-		co = new ClipperLib.ClipperOffset(0.25, 0.25)
-		co.AddPaths(offset, ClipperLib.JoinType.jtMiter, ClipperLib.EndType.etClosedPolygon)
-		cutout = new ClipperLib.Paths()
-
-		t = tool*pgScale
-
-		co.Execute(cutout,t)
-
-		ClipperLib.JS.ScaleDownPaths(offset, pgScale)
-		ClipperLib.JS.ScaleDownPaths(cutout, pgScale)
-
-		paths.push(cutout)
-
-	}
-
-	offset=paths
-
-	draw()
-
-	cutDepth = ((thickness/10)+0.015).toFixed(3)
-
-	pt= Math.ceil(cutDepth/((tool/10)*2))  //passes
-	pd = parseFloat(cutDepth/pt) //depth of pass
-
-
-	for(i=0;i<offset.length;i++){
-
-
-		sbp="MS,0.5,0.25\n"
-		sbp+="JZ,0.25\n"
-		sbp+="SO,1,1\n"
-		sbp+="PAUSE 3\n"
-
-		yOffset = 0
-		if((i<2)||(i==2)){
-			xOffset = birdhouse.width/2
-		}
-		else if(i==2){
-			xOffset = birdhouse.depth/2
-		}
-		else if(i==3){
-			xOffset = birdhouse.width/2
-			yOffset = thickness/10
-		}
-		else if(i==4){
-			xOffset = thickness/10
-		}
-		else if(i==5){
-			xOffset = 0
-			
-		}
-
-
-		for(j=offset[i].length-1;j>=0;j--){
-
-			sbp+="J2," + (xOffset+(offset[i][j][0].X/10)).toFixed(3) + "," + (yOffset+(offset[i][j][0].Y/10)).toFixed(3) + "\n"
-
-			for(p=1;p<=pt;p++){
-				if(p==pt){
-					sbp+="MZ,-"+cutDepth+"\n"
-				}
-				else{
-					sbp+="MZ,-" + (p*pd).toFixed(3) + "\n"
-				}
-				for(k=0;k<offset[i][j].length;k++){
-					sbp+="M2," + (xOffset+(offset[i][j][k].X/10)).toFixed(3) + "," + (yOffset+(offset[i][j][k].Y/10)).toFixed(3) + "\n"
-				}
-				sbp+="M2," + (xOffset+(offset[i][j][0].X/10)).toFixed(3) + "," + (yOffset+(offset[i][j][0].Y/10)).toFixed(3) + "\n"
-			}
-			sbp+="JZ,0.125\n"
-			
-		}
-
-	sbp+="JZ,0.25\n"
-	sbp+="SO,1,0\n"
-	sbp+="J2,0,0\n"	
-
-	if(i==0){
-		partName='birdhouseFront'
-	}
-	else if(i==1){
-		partName='birdhouseBack'
-	}
-	else if(i==2){
-		partName='birdhouseLeftRight'
-	}
-	else if(i==3){
-		partName='birdhouseBottom'
-	}
-	else if(i==4){
-		partName='birdhouseTopLeft'
-	}
-	else if(i==5){
-		partName='birdhouseTopRight'
-	}
-	
-	fabmo.submitJob({
-		file : sbp,
-		filename : partName + '.SBP',
-		name : partName,
-		description :  '1/8\"endmill'
-	})
-	
-	}
-
-
-}
 
 
 
