--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@ endmill:<br>
 <select id="output" autocomplete="on">
 	<option value="dxf">DXF</option>
 	<option value="gcode">G-code</option>
-	<option value="sbp" selected>SBP</option>
+	<option value="sbp_hb" selected>HandiBot</option>
+	<option value="sbp_sb">ShopBot</option>
 </select><p>
 
 </div>
